--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Design Patterns with TypeScript</title>
+
+    <script src="scripts/singleton.ts" type="module" defer></script>
   </head>
   <body></body>
 </html>
